--- a/package.json
+++ b/package.json
@@ -143,5 +143,10 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "aes-js": "^3.1.2",
+    "crypto-js": "^4.1.1",
+    "react-native-crypto-aes-cbc": "^1.0.8"
   }
 }
