--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
   },
   "dependencies": {
     "aes-js": "^3.1.2",
+    "axios": "^0.24.0",
     "crypto-js": "^4.1.1",
     "react-native-crypto-aes-cbc": "^1.0.8"
   }
